--- a/project.json
+++ b/project.json
@@ -6,7 +6,8 @@
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.System.Activities": "[21.10.2]",
     "UiPath.Testing.Activities": "[1.4.3]",
-    "UiPath.UIAutomation.Activities": "[21.10.3]"
+    "UiPath.UIAutomation.Activities": "[21.10.3]",
+    "UiPath.Word.Activities": "[1.7.3]"
   },
   "webServices": [],
   "entitiesStores": [],
